# elb

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ci/: cross.sh  preamble.sh  publish.sh  test.sh
cli/: Cargo.toml  README.md
cli/src/: deps.rs  formatting.rs  loader.rs  logger.rs  main.rs  patch.rs  relocate.rs  show.rs
dl/: Cargo.toml  README.md
dl/src/: base32.rs  error.rs  glibc.rs  ld_so.rs  lib.rs  loader.rs  musl.rs  relocate.rs  relocator.rs
dl/tests/: relocate.rs
src/: alloc.rs  allocations.rs  allocator.rs  byte_order.rs  class.rs  constants.rs  dynamic_table.rs  elf.rs  enums.rs  error.rs  flags.rs  header.rs  host.rs  io.rs  lib.rs  macros.rs  other.rs  patch.rs  read.rs  relocations.rs  sections.rs  segments.rs  string_table.rs  strings.rs  symbols.rs  tables.rs  test.rs  validation.rs
tests/: read.rs
