[package]
name = "elb"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["bitflags/std", "log/std", "thiserror/std"]

[dependencies]
bitflags.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.2"
bitflags = { workspace = true, features = ["arbitrary"] }
fs-err = "3.1.0"
walkdir = "2.5.0"

[workspace]
members = [".", "cli", "dl"]
default-members = [".", "cli", "dl"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bitflags = { version = "2.9.0", default-features = false, features = [] }
log = { version = "0.4.26", default-features = false, features = [] }
thiserror = { version = "2.0.12", default-features = false, features = [] }

[lints]
workspace = true

[workspace.lints.clippy]
unwrap_used = "deny"
panic = "deny"

[workspace.lints.rust]
missing_docs = "warn"

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.base32]
opt-level = 3
