[package]
name = "elb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "elb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
elb = { path = "..", version = "0.1.0" }
elb-dl = { path = "../dl", version = "0.1.0" }
env_logger = "0.11.6"
fs-err = "3.1.0"
log.workspace = true
thiserror.workspace = true
