[package]
name = "elb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/elb-cli"
readme = "README.md"
description = "Command-line utility that inspects ELF files, prints their dependencies and patches RPATH, RUNPATH and interpreter."
keywords = ["elf", "patch", "rpath", "runpath", "interpreter"]
categories = ["encoding", "command-line-utilities", "api-bindings"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
elb = { path = "..", version = "0.3.1" }
elb-dl = { path = "../dl", version = "0.3.1", features = ["relocate"] }
env_logger = "0.11.8"
fs-err = "3.1.0"
log.workspace = true
thiserror.workspace = true
