[package]
name = "elb-dl"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/elb-dl"
readme = "README.md"
description = "A library that resolves ELF dependencies without loading and executing them."
keywords = ["elf", "dependencies", "glibc", "musl", "ldd"]
categories = ["api-bindings"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[features]
default =  ["glibc", "musl", "fs-err"]
glibc = ["dep:glob"]
musl = []
fs-err = ["dep:fs-err"]

[dependencies]
elb = { path = "..", version = "0.1.0" }
fs-err = { version = "3.1.0", optional = true }
glob = { version = "0.3.2", optional = true }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
base32 = "0.5.1"
sha2 = "0.10.8"
tempfile = "3.18.0"
env_logger = "0.11.6"

[lints]
workspace = true
