[package]
name = "elb-dl"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/elb-dl"
readme = "README.md"
description = "A library that resolves ELF dependencies without loading and executing them."
keywords = ["elf", "dependencies", "glibc", "musl", "ldd"]
categories = ["api-bindings"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[features]
default =  ["glibc", "musl", "fs-err"]
fs-err = ["dep:fs-err"]
glibc = ["dep:glob"]
musl = []
relocate = ["dep:blake2b_simd"]

[dependencies]
blake2b_simd = { version = "1.0.3", optional = true }
elb = { path = "..", version = "0.3.0" }
fs-err = { workspace = true, optional = true }
glob = { version = "0.3.2", optional = true }
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
arbtest = "0.3.2"
env_logger = "0.11.8"
page_size = "0.6.0"
tempfile = "3.19.1"

[lints]
workspace = true
